fix: make whatIDO transparent on mobile and add mobile character model scroll-out animation

--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -286,13 +286,13 @@
 @media only screen and (max-width: 1024px) {
   .whatIDO {
     height: auto;
-    padding-top: 30px;
+    padding-top: 50vh;
     padding-bottom: 80px;
     box-sizing: border-box;
     display: block;
     position: relative;
     z-index: 6;
-    background-color: var(--backgroundColor);
+    background-color: transparent;
   }
   .what-box-in {
     display: flex;
